--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "borodin-vasiliy/php-stories": "^1.2",
         "filament/filament": "^3.0-stable",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "wapmorgan/mp3info": "^0.1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
