--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,18 @@
     "require": {
         "php": "^8.1",
         "borodin-vasiliy/php-stories": "^1.2",
+        "chrome-php/chrome": "^1.9",
         "filament/filament": "^3.0-stable",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "wapmorgan/mp3info": "^0.1.0"
+        "wapmorgan/mp3info": "^0.1.0",
+        "wiebenieuwenhuis/filament-code-editor": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel/dusk": "^7.11",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
