--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,12 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "novadaemon/filament-pretty-json": "^2.0",
         "wapmorgan/mp3info": "^0.1.0",
         "wiebenieuwenhuis/filament-code-editor": "^1.0"
     },
     "require-dev": {
+        "beyondcode/laravel-dump-server": "^1.9",
         "fakerphp/faker": "^1.9.1",
         "laravel/dusk": "^7.11",
         "laravel/pint": "^1.0",
