--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "wiebenieuwenhuis/filament-code-editor": "^1.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.9",
         "beyondcode/laravel-dump-server": "^1.9",
         "fakerphp/faker": "^1.9.1",
         "laravel/dusk": "^7.11",
